Refine documentation with KaTeX formulas and improved preview system
- README.md: Complete Gap Theorem formulation with KaTeX
  - Define greedy prime decomposition (Sparse) with uniqueness property
  - Define immediate predecessor as largest prime ≤ π(q)
  - Add Prime Orbit definition with recursive construction
  - Include worked example (prime 11 orbit)
  - Note orbit non-uniqueness vs sparse representation uniqueness
  - Add proof sketch showing gap equals predecessor count
  - Document 1M prime verification results
  - Show hub primes with next prime for clarity (113→127, 523→541, 1327→1361)

- docs/connections-to-classical-theory.md: Convert to KaTeX formulas
  - Prime Number Theorem: π(x) ~ x/ln(x)
  - Cramér's conjecture with limsup notation
  - All mathematical notation in proper KaTeX
  - Hub examples with arrow notation (89 → 97, etc.)
  - Summary table with proper mathematical formatting

- Makefile: Improved preview system
  - Auto-discover all markdown files using find
  - Convert all docs to HTML in preview/ folder
  - Automatic cross-reference conversion (.md → .html)
  - Clean target removes entire preview/ directory

- .gitignore: Update for new structure
  - Add preview/ directory
  - Add reading.md for private notes
  - Remove old README.html entry

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ reports/*.pdf
 # Wolfram Language cache
 .wl_cache/
 
+# HTML previews
+preview/
+
+# Private notes
+reading.md
+
 # System files
 .DS_Store
 *~
