Add arXiv preprint draft and formula documentation improvements
Primary additions:
- primorial-arxiv-draft.tex: Publication-ready arXiv preprint for
  primorial formula discovery (PhD application centerpiece)
- gap-theorem.tex: OpTeX document on Prime Index DAG Gap Theorem

Formula reference improvements:
- Fixed critical m1=1 optimization formula
- Replaced programmatic identifiers (sqrttrf → ρ, sym → σ,
  nestqrt → N, ForFactiMod → Φ) with mathematical notation
- Simplified error metrics notation (E_quad → E, P_sqrt → P)
- Introduced Chebyshev ratio trick R_m(z) = U_{m-1}(z)/U_{m+1}(z)
- Standardized mathematical notation ({x} for fractional part,
  den(q) for denominator)
- Verified all formulas against source code

Build infrastructure:
- Added Makefile for automated LaTeX/OpTeX compilation
- Updated .gitignore for LaTeX build artifacts

Author: Jan Geuss Popelka
Target: math.NT arXiv submission

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ reports/*.png
 reports/*.pdf
 reports/*.svg
 
+# LaTeX build artifacts
+*.aux
+*.log
+*.out
+*.toc
+*.fls
+*.fdb_latexmk
+*.synctex.gz
+
 # Wolfram Language cache
 .wl_cache/
 
