feat: remove reference, optimized complete recurrent test

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,8 +1,8 @@
 # Makefile for LaTeX/OpTeX documents
 
-.PHONY: all clean formula gap
+.PHONY: all clean formula gap primorial proof primorial-cs
 
-all: formula-reference.pdf gap-theorem.pdf
+all: formula-reference.pdf gap-theorem.pdf primorial-arxiv-draft.pdf primorial-recurrence-proof.pdf primorial-arxiv-draft-cs.pdf
 
 # Standard LaTeX document
 formula-reference.pdf: formula-reference.tex
@@ -16,9 +16,30 @@ gap-theorem.pdf: gap-theorem.tex
 	luahbtex -fmt optex gap-theorem.tex
 	@echo "Generated: gap-theorem.pdf"
 
+# Primorial preprint
+primorial-arxiv-draft.pdf: primorial-arxiv-draft.tex
+	pdflatex -interaction=nonstopmode primorial-arxiv-draft.tex
+	pdflatex -interaction=nonstopmode primorial-arxiv-draft.tex
+	@echo "Generated: primorial-arxiv-draft.pdf"
+
+# Primorial recurrence proof
+primorial-recurrence-proof.pdf: primorial-recurrence-proof.tex
+	pdflatex -interaction=nonstopmode primorial-recurrence-proof.tex
+	pdflatex -interaction=nonstopmode primorial-recurrence-proof.tex
+	@echo "Generated: primorial-recurrence-proof.pdf"
+
+# Primorial preprint (Czech)
+primorial-arxiv-draft-cs.pdf: primorial-arxiv-draft-cs.tex
+	pdflatex -interaction=nonstopmode primorial-arxiv-draft-cs.tex
+	pdflatex -interaction=nonstopmode primorial-arxiv-draft-cs.tex
+	@echo "Generated: primorial-arxiv-draft-cs.pdf"
+
 # Individual targets
 formula: formula-reference.pdf
 gap: gap-theorem.pdf
+primorial: primorial-arxiv-draft.pdf
+proof: primorial-recurrence-proof.pdf
+primorial-cs: primorial-arxiv-draft-cs.pdf
 
 # Clean auxiliary files
 clean:
@@ -27,5 +48,5 @@ clean:
 
 # Clean everything including PDFs
 distclean: clean
-	rm -f formula-reference.pdf gap-theorem.pdf
+	rm -f formula-reference.pdf gap-theorem.pdf primorial-arxiv-draft.pdf primorial-recurrence-proof.pdf primorial-arxiv-draft-cs.pdf
 	@echo "Cleaned all generated files"
